// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogContent Snapshot - No overflow 1`] = `
.c1 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-bottom: 0.125rem;
  padding-top: 0.125rem;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow: auto;
}

.c0.overflow {
  border-bottom: 1px solid #DEE1E5;
  border-top: 1px solid #DEE1E5;
  box-shadow: inset 0 -4px 4px -4px #DEE1E5;
}

@media screen and (min-width:30rem) {
  .c1 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      style={
        Object {
          "height": "4rem",
        }
      }
    >
      Stuff
    </div>
  </div>
</div>
`;

exports[`DialogContent Snapshot 1`] = `
.c1 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-bottom: 0.125rem;
  padding-top: 0.125rem;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow: auto;
}

.c0.overflow {
  border-bottom: 1px solid #DEE1E5;
  border-top: 1px solid #DEE1E5;
  box-shadow: inset 0 -4px 4px -4px #DEE1E5;
}

@media screen and (min-width:30rem) {
  .c1 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Stuff
  </div>
</div>
`;
